services/20-core/deconz/30-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: deconz
  namespace: deconz
  labels:
    app.kubernetes.io/name: deconz
spec:
  selector:
    app.kubernetes.io/name: deconz
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
